fix stub alert
