# server/api/swagger.yaml
@@ -14,7 +14,7 @@ tags:
 - name: "alert"
 - name: "monitoring"
 - name: "state"
-- name: "contract"
+- name: "proposal"
 consumes:
 - "application/json"
 produces:
@@ -343,7 +343,7 @@ paths:
         200:
           description: "The response body for a successful response."
           schema:
-            $ref: "#/definitions/ack-response"
+            $ref: "#/definitions/alert-body"
         400:
           description: "Invalid request, required parameter(s) missing."
         401:
@@ -640,6 +640,84 @@ paths:
           description: "The operation is not allowed (unauthorised access, the token\
             \ is invalid, etc.)."
       x-swagger-router-controller: "State"
+  /proposal/submitProposal:
+    post:
+      tags:
+      - "proposal"
+      description: "Submitting a proposal \n"
+      operationId: "proposalSubmitProposalPOST"
+      consumes:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Body in JSON"
+        required: true
+        schema:
+          $ref: "#/definitions/submit-proposal-body"
+      responses:
+        200:
+          description: "The response body for a successful response."
+          schema:
+            $ref: "#/definitions/ack-response"
+        400:
+          description: "Invalid request, required parameter(s) missing."
+        401:
+          description: "The operation is not allowed (unauthorised access, the token\
+            \ is invalid, etc.)."
+      x-swagger-router-controller: "Proposal"
+  /proposal/getProposal:
+    post:
+      tags:
+      - "proposal"
+      description: "getting a proposal\n"
+      operationId: "proposalGetProposalPOST"
+      consumes:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Body in JSON"
+        required: true
+        schema:
+          $ref: "#/definitions/get-proposal-body"
+      responses:
+        200:
+          description: "The response body for a successful response."
+          schema:
+            $ref: "#/definitions/get-proposal-response"
+        400:
+          description: "Invalid request, required parameter(s) missing."
+        401:
+          description: "The operation is not allowed (unauthorised access, the token\
+            \ is invalid, etc.).      "
+      x-swagger-router-controller: "Proposal"
+  /proposal/voteProposal:
+    post:
+      tags:
+      - "proposal"
+      description: "Submitting a proposal \n"
+      operationId: "proposalVoteProposalPOST"
+      consumes:
+      - "application/json"
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "Body in JSON"
+        required: true
+        schema:
+          $ref: "#/definitions/vote-proposal-body"
+      responses:
+        200:
+          description: "The response body for a successful response."
+          schema:
+            $ref: "#/definitions/ack-response"
+        400:
+          description: "Invalid request, required parameter(s) missing."
+        401:
+          description: "The operation is not allowed (unauthorised access, the token\
+            \ is invalid, etc.)."
+      x-swagger-router-controller: "Proposal"
 definitions:
   policy-request-body:
     type: "object"
@@ -1001,6 +1079,7 @@ definitions:
     type: "object"
     required:
     - "alertBody"
+    - "alertID"
     - "alertSource"
     - "alertType"
     - "requestorID"
@@ -1013,6 +1092,9 @@ definitions:
         type: "string"
         description: "A crypto token to validate if the entity is allowed to perform\
           \ the requested operation."
+      alertID:
+        type: "string"
+        description: "Identifier of the alert."
       alertType:
         type: "string"
         description: "POLICY_VIOLATION_ALERT, created by the PVE, corresponds to an\
@@ -1037,6 +1119,41 @@ definitions:
         type: "string"
         description: "Base64 encoded alert."
     description: "HTTP body defining the store operation for the /store endpoint."
+  alert-body:
+    type: "object"
+    required:
+    - "alertBody"
+    - "alertID"
+    - "alertSource"
+    - "alertType"
+    properties:
+      alertID:
+        type: "string"
+        description: "Identifier of the alert."
+      alertType:
+        type: "string"
+        description: "POLICY_VIOLATION_ALERT, created by the PVE, corresponds to an\
+          \ alert regarding a policy violation. REQ_RESP_DISCREPANCY_ALERT, created\
+          \ by the PVE, corresponds to an alert regarding a discrepancy of an XACML\
+          \ request/response. AUDIT_ALERT, created by the FSA, corresponds to an alert\
+          \ which is generated after performing offline analysis over the access control\
+          \ logs.SLA_ALERT, created by FAM, corresponds to an alert which is generated\
+          \ after an SLA violation is detected."
+        enum:
+        - "POLICY_VIOLATION_ALERT"
+        - "REQ_RESP_DISCREPANCY_ALERT"
+        - "AUDIT_ALERT"
+        - "SLA_ALERT"
+      alertSource:
+        type: "string"
+        description: "Refences the entity which has generated the alert."
+        enum:
+        - "PVE"
+        - "FSA"
+      alertBody:
+        type: "string"
+        description: "Base64 encoded alert."
+    description: "HTTP body defining the body of an alert"
   monitoring-store:
     type: "object"
     required:
@@ -1300,6 +1417,102 @@ definitions:
         items:
           $ref: "#/definitions/statetenantrequestbody_cloudMemberIDs"
     description: "HTTP body defining the service store operation"
+  submit-proposal-body:
+    type: "object"
+    required:
+    - "proposal"
+    - "proposalID"
+    - "requestorID"
+    - "token"
+    - "typeProposal"
+    properties:
+      requestorID:
+        type: "string"
+        description: "Identifier of the requesting entity."
+      token:
+        type: "string"
+        description: "A crypto token to validate if the entity is allowed to perform\
+          \ the requested operation."
+      proposalID:
+        type: "string"
+        description: "identifier of the proposal."
+      typeProposal:
+        type: "string"
+        enum:
+        - "JOIN"
+        - "LEAVE"
+        - "UPDATE"
+      proposal:
+        type: "string"
+        description: "body of the proposal."
+    description: "body for sumitting a porposal for the federation"
+  vote-proposal-body:
+    type: "object"
+    required:
+    - "memberID"
+    - "proposalID"
+    - "token"
+    - "vote"
+    properties:
+      memberID:
+        type: "string"
+        description: "Identifier of the voter member."
+      token:
+        type: "string"
+        description: "A crypto token to validate if the entity is allowed to perform\
+          \ the requested operation."
+      proposalID:
+        type: "string"
+        description: "identifier of the proposal."
+      vote:
+        type: "string"
+        description: "body of the proposal."
+    description: "vote for a submitted proposal."
+  get-proposal-body:
+    type: "object"
+    required:
+    - "proposalID"
+    - "requestorID"
+    - "token"
+    properties:
+      requestorID:
+        type: "string"
+        description: "Identifier of the requesting entity."
+      token:
+        type: "string"
+        description: "A crypto token to validate if the entity is allowed to perform\
+          \ the requested operation."
+      proposalID:
+        type: "string"
+        description: "Identifier of the proposal."
+    description: "body for getting a porposal to vote by the federated member."
+  get-proposal-response:
+    type: "object"
+    required:
+    - "proposal"
+    - "proposalID"
+    - "proposalStatus"
+    - "typeProposal"
+    properties:
+      proposalID:
+        type: "string"
+        description: "Itendifier of the proposal."
+      typeProposal:
+        type: "string"
+        enum:
+        - "JOIN"
+        - "LEAVE"
+        - "UPDATE"
+      proposalStatus:
+        type: "string"
+        description: "Itendifier of the pcurrent satus of the votes of the porposal."
+      proposal:
+        type: "array"
+        description: "proposal infos about its descripton and the member who propose\
+          \ it."
+        items:
+          $ref: "#/definitions/getproposalresponse_proposal"
+    description: "response message body of the getProposal function"
   query-request:
     type: "object"
     required:
@@ -1369,3 +1582,19 @@ definitions:
       memberId:
         type: "string"
         description: "Specifies the id of the membet."
+  getproposalresponse_proposal:
+    required:
+    - "proposalDescription"
+    - "proposalQuorum"
+    - "proposerId"
+    properties:
+      proposerId:
+        type: "string"
+        description: "Specifies the id of who make the proposal."
+      proposalDescription:
+        type: "string"
+        description: "specifies the description of the proposal to vote."
+      proposalQuorum:
+        type: "string"
+        description: "this value is the number of voted needed to achieve acceptthe\
+          \ proposal."
